fixed scrollbar hiding issue

--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,10 @@
   --color-primary-bg: #013131;
 }
 
+body {
+  overflow: auto !important;
+}
+
 .disabled-btn {
   cursor: not-allowed;
   background-color: #cccccc;
